--- a/PaperFlyServer-account/pom.xml
+++ b/PaperFlyServer-account/pom.xml
@@ -21,6 +21,18 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.glassfish.security</groupId>
+			<artifactId>security</artifactId>
+			<version>3.1.1</version>
+			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.12.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>eclipselink</artifactId>
 			<version>2.5.0</version>
