- added restMethods - activated oauth

--- a/PaperFlyServer-web/src/main/webapp/WEB-INF/web.xml
+++ b/PaperFlyServer-web/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,14 @@
 			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
 			<param-value>true</param-value>
 		</init-param>
+		<init-param>
+			<param-name>com.sun.jersey.config.property.oauth.ignorePathPattern</param-name>
+			<param-value>login|irgendwas</param-value>
+		</init-param>
+		<init-param>
+			<param-name>com.sun.jersey.config.property.oauth.realm</param-name>
+			<param-value>PaperFlyRealm</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet>
