- REST-API restructured

--- a/PaperFlyServer-web/pom.xml
+++ b/PaperFlyServer-web/pom.xml
@@ -110,6 +110,23 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.enunciate</groupId>
+				<artifactId>maven-enunciate-plugin</artifactId>
+				<!-- check for the latest version -->
+				<version>1.27</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>docs</goal>
+						</goals>
+						<configuration>
+							<!-- the directory where to put the docs -->
+							<docsDir>${project.build.directory}/docs</docsDir>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
