--- a/PaperFlyServer-web/pom.xml
+++ b/PaperFlyServer-web/pom.xml
@@ -14,6 +14,15 @@
 
 	<name>PaperFlyServer-web</name>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>miredot</id>
+			<name>MireDot Releases</name>
+			<url>http://nexus.qmino.com/content/repositories/miredot</url>
+			<layout>default</layout>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<properties>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -86,6 +95,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
+		<!--		<dependency>
+			<groupId>com.qmino</groupId>
+			<artifactId>miredot-annotations</artifactId>
+			<version>1.2.1</version>
+		</dependency>-->
 
 		<dependency>
 			<groupId>javax</groupId>
@@ -111,21 +125,19 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.enunciate</groupId>
-				<artifactId>maven-enunciate-plugin</artifactId>
-				<!-- check for the latest version -->
-				<version>1.27</version>
+				<groupId>com.qmino</groupId>
+				<artifactId>miredot-maven-plugin</artifactId>
+				<version>1.2.1</version>
 				<executions>
 					<execution>
 						<goals>
-							<goal>docs</goal>
+							<goal>restdoc</goal>
 						</goals>
-						<configuration>
-							<!-- the directory where to put the docs -->
-							<docsDir>${project.build.directory}/docs</docsDir>
-						</configuration>
 					</execution>
 				</executions>
+				<configuration>
+					<!--insert configuration here-->
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
