--- a/PaperFlyServer-web/pom.xml
+++ b/PaperFlyServer-web/pom.xml
@@ -95,11 +95,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
-		<!--		<dependency>
+		<dependency>
 			<groupId>com.qmino</groupId>
 			<artifactId>miredot-annotations</artifactId>
-			<version>1.2.1</version>
-		</dependency>-->
+			<version>1.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax</groupId>
