--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,11 @@
 			<id>eclipselink</id>
 			<name>Repository for library EclipseLink (JPA 2.0)</name>
 		</repository>
-		
+		<repository>
+			<id>miredot</id>
+			<name>MireDot Releases</name>
+			<url>http://nexus.qmino.com/content/repositories/miredot</url>
+		</repository>
 	</repositories>
 	<build>
 		<pluginManagement>
