--- a/PaperFlyServer-web/src/main/webapp/WEB-INF/web.xml
+++ b/PaperFlyServer-web/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<!-- Jersey -->
+	<filter>
+		<filter-name>OAuthFilter</filter-name>
+		<filter-class>de.fhb.paperfly.server.OAuthFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>OAuthFilter</filter-name>
+		<url-pattern>/secure/*</url-pattern>
+	</filter-mapping>
 	<servlet>
 		<servlet-name>Jersey Web Application</servlet-name>
 		<servlet-class>
@@ -28,10 +36,6 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	<servlet>
-		<servlet-name>LogoutServlet</servlet-name>
-		<servlet-class>de.fhb.paperfly.server.LogoutServlet</servlet-class>
-	</servlet>
 	<servlet-mapping>
 		<servlet-name>Jersey Web Application</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
@@ -53,10 +57,6 @@
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.jsf</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>LogoutServlet</servlet-name>
-		<url-pattern>/LogoutServlet</url-pattern>
 	</servlet-mapping>
 	<session-config>
 		<session-timeout>
