- added global chatroom with ID 1 - fixed logout issues - fixed getAccountByUsername issues - login and logout will now change onlinestatus of the account - logout now needs OAuth headers

--- a/PaperFlyServer-web/src/main/webapp/WEB-INF/web.xml
+++ b/PaperFlyServer-web/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 		</init-param>
 		<init-param>
 			<param-name>com.sun.jersey.config.property.oauth.ignorePathPattern</param-name>
-			<param-value>v1/auth/login|v1/auth/logout|v1/ping</param-value>
+			<param-value>v1/auth/login|v1/ping</param-value>
 		</init-param>
 		<init-param>
 			<param-name>com.sun.jersey.config.property.oauth.realm</param-name>
